<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">fridge register</string>
    <string name="title">fridger register</string>
    <string name="menu_settings">設定</string>
    <string name="title_activity_top">TopActivity</string>
    <string name="barcode">スキャン</string>
    <string name="refrigartor">冷蔵庫</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="category">カテゴリ選択</string>
    <string name="register">OK!</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="menu_scan_end">読取終了</string>
    <string name="menu_scan_shutter">写真撮影</string>
    <string name="title_activity_fridge">FridgeActivity</string>
    <string name="onClick">onClick</string>
    <string name="cancel">Cancel</string>
    <string name="categoryselect">カテゴリを選択してください。</string>
    <string name="menu_fridge_delete">削除</string>
    <string name="menu_fridge_grid">グリッド</string>
    <string name="menu_fridge_list">リスト</string>
    <string name="menu_detail_fridge">XXX</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="app_version">0.0.1</string>
    <string name="setting_title_version">fridge register</string>
    <string name="listview_empty">商品がありません。画面をタップして\n登録してください。</string>
    <string name="dialog_positive_button">はい</string>
    <string name="dialog_neutral_button">いいえ</string>
    <string name="dialog_negative_button">キャンセル</string>
    <string name="dialog_fridge_message">アイテムをすべて冷蔵庫に入れます。\nよろしいですか？</string>
    <string name="dialog_finish_message">アプリケーションを終了します。\nよろしいですか？</string>
</resources>