<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_grid"
	  android:icon="@android:drawable/ic_menu_today"
	  android:title="@string/menu_fridge_grid"
	  android:showAsAction="always"
	  android:orderInCategory="100" />
    <item android:id="@+id/menu_list"
	  android:icon="@android:drawable/ic_menu_sort_by_size"
	  android:title="@string/menu_fridge_list"
	  android:showAsAction="always"
	  android:orderInCategory="100" />
    <item android:id="@+id/menu_scan"
	  android:icon="@android:drawable/ic_menu_camera"
	  android:title="@string/barcode"
	  android:showAsAction="always"
	  android:orderInCategory="100" />
    <item android:id="@+id/menu_settings"
	  android:icon="@android:drawable/ic_menu_preferences"
	  android:title="@string/menu_settings"
	  android:orderInCategory="100" />

</menu>
