<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        android:text="@string/title"
        android:textSize="28sp" />
	<LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:orientation="vertical" 
    	android:layout_marginTop="50dp"
    	android:layout_marginBottom="30dp"
    	android:gravity="center">
    	
    	<Button
        	android:id="@+id/barcodeButton"
        	android:layout_width="200dp"
        	android:layout_height="wrap_content"
        	android:text="@string/barcode" />

    	<Button
        	android:id="@+id/fridgeButton"
        	android:layout_width="200dp"
        	android:layout_height="wrap_content"
        	android:text="@string/refrigartor" />
	</LinearLayout>
</LinearLayout>
